--- a/style/summary_login/signup.css
+++ b/style/summary_login/signup.css
@@ -1,7 +1,3 @@
-.signup-card {
-    gap: 16px;
-}
-
 .sign-up-input{
     padding: 0 21px;
     display: flex;
@@ -49,7 +45,7 @@ button.signup-button-primary:disabled {
 }
 
 .login-buttons {
-    margin-top: 0;
+    margin-top: 32px;
 }
 
 .back-arrow {
@@ -129,7 +125,8 @@ button.signup-button-primary:disabled {
 }
 
 .input-error {
-    display: block;
+    display: flex;
+    align-items: center;
     margin-top: 4px;
     font-size: 16px;
     color: #FF3B3B;
