--- a/style/board_responsive.css
+++ b/style/board_responsive.css
@@ -35,14 +35,8 @@
     .repsonsive_add_task_button {
         display: block;
     }
-}
 
-@media (max-width: 767px) {
-    .header-nav {
-        padding-left: 48px;
-    }
-    
-    .board_table {
+        .board_table {
         flex-direction: column;
         height: auto;
     }
@@ -61,6 +55,18 @@
     .single_task_content {
         min-width: 200px;
         max-width: 220px;
+    }
+}
+
+@media (max-width: 1100px) and (min-width: 768px) {
+    .article-bg {
+        width: calc(100vw - 247px);
+    }
+}
+
+@media (max-width: 767px) {
+    .header-nav {
+        padding-left: 48px;
     }
 }
 
