--- a/style/board_responsive.css
+++ b/style/board_responsive.css
@@ -99,6 +99,18 @@
     }
 }
 
+@media (max-width: 1100px) and (min-width: 768px) {
+    .article-bg {
+        width: calc(100vw - 247px);
+    }
+}
+
+@media (max-width: 767px) {
+    .header-nav {
+        padding-left: 48px;
+    }
+}
+
 @media (max-width: 500px) {
     .main-content {
         padding: 16px 24px;
