board columns responsive up to 1100px

--- a/style/board_responsive.css
+++ b/style/board_responsive.css
@@ -104,7 +104,7 @@
     }
 }
 
-@media (min-width: 768px) {
+@media (max-width: 1100px) and (min-width: 768px) {
     .article-bg {
         width: calc(100vw - 247px);
     }
