--- a/style/board_responsive.css
+++ b/style/board_responsive.css
@@ -58,7 +58,7 @@
     }
 }
 
-@media (max-width: 1100px) and (min-width: 768px) {
+@media (min-width: 768px) {
     .article-bg {
         width: calc(100vw - 247px);
     }
