--- a/style/mainframe.css
+++ b/style/mainframe.css
@@ -113,7 +113,7 @@ article {
     padding-right: 40px;
     padding-top: 20px;
     padding-bottom: 20px;
-    max-width: 1440px;
+    max-width: calc(1440px - 156px);
 }
 
 .header-side-buttons {
@@ -129,7 +129,7 @@ article {
 }
 
 .main-content {
-    max-width: 1440px;
+    max-width: calc(1440px - 128px);
     padding: 0px 64px;
     background-color: #F6F7F8;
     height: 100%;
