--- a/style/board_responsive.css
+++ b/style/board_responsive.css
@@ -97,6 +97,11 @@
         min-width: 200px;
         max-width: 220px;
     }
+
+    .sidebar {
+        position: sticky;
+        top: 0px;
+    }
 }
 
 @media (min-width: 768px) {
