update size of login logo

--- a/style/summary_login/login_responsive.css
+++ b/style/summary_login/login_responsive.css
@@ -119,9 +119,18 @@
     .login-title {
         font-size: 43px;
     }
-
+    
     .login-logo {
         width: 60px;
+    }
+
+    .login-title {
+        font-size: 43px;
+    }
+
+    .login-logo {
+        width: 64px;
+        height: 78px;
     }
 
     .login-footer {
