--- a/style/summary_login/login_responsive.css
+++ b/style/summary_login/login_responsive.css
@@ -38,10 +38,6 @@
 }
 
 @media (max-width: 768px) {
-    .login-logo {
-        width: 72px;
-    }
-
     .login-container {
         width: 100%;
         max-width: 100%;
@@ -105,7 +101,8 @@
     }
 
     .login-logo {
-        width: 60px;
+        width: 64px;
+        height: 78px;
     }
 
     .login-footer {
