--- a/style/summary_login/signup_responsive.css
+++ b/style/summary_login/signup_responsive.css
@@ -1,64 +1,21 @@
-@media (max-width: 1150px) {
-    .login-card {
-        max-width: 600px;
-    }
-}
-
-@media (max-width: 1050px) {
-    .login-card {
-        max-width: 500px;
-    }
-}
-
 @media (max-width: 950px) {
-    .login-card {
-        max-width: 400px;
-    }
-    .login-logo {
+    /* .login-logo {
         width: 72px;
-    }
+    } */
     .back-arrow {
         top: 40px;
         left: 40px;
     }
 }
 
-@media (max-width: 768px) {
-
-    .login-card {
-        width: 100%;
-        max-width: 380px;
-    }
-
-    .signup-card.signup-card {
-        margin-top: 28px;
-    }
-}
-
 @media (max-width: 500px) {
-    .login-card {
-        max-width: 320px;
-        padding: 28px;
-    }
-
     .login-title {
         font-size: 47px;
     }
 
 }
 
-@media (max-width: 450px) {
-    .login-logo {
-        width: 60px;
-    }
-}
-
 @media (max-width: 400px) {
-    .login-card {
-        padding: 24px;
-        max-width: 280px;
-    }
-
     .login-title {
         font-size: 43px;
     }
@@ -88,16 +45,7 @@
     }
 }
 
-@media (max-width: 350px) {
-    .login-card {
-        max-width: 250px;
-    }
-}
-
 @media (min-width: 1260px) and (max-width: 1300px) and (min-height: 780px) and (max-height: 820px) {
-    .signup-card.signup-card {
-        padding: 32px 48px;
-    }
     .login-footer {
         margin-top: 20px;
     }
