--- a/style/summary_login/signup_responsive.css
+++ b/style/summary_login/signup_responsive.css
@@ -1,10 +1,14 @@
 @media (max-width: 950px) {
-    /* .login-logo {
-        width: 72px;
-    } */
     .back-arrow {
         top: 40px;
         left: 40px;
+    }
+}
+
+@media (max-width: 600px) {
+    .signup-button-primary {
+        max-width: 100%;
+        font-size: 18px;
     }
 }
 
