--- a/style/summary_login/login_responsive.css
+++ b/style/summary_login/login_responsive.css
@@ -74,11 +74,9 @@
         gap: 12px;
     }
 
-    .login-button-primary{
-        font-size: 18px;
-    }
-
-    .login-button-secondary{
+    .login-button-primary,
+    .login-button-secondary,
+    .login-input{
         font-size: 18px;
     }
    
@@ -145,6 +143,7 @@
 
 @media (max-height: 800px) {
     .login-card{
-        padding: 32px 16px;
+        padding-top: 32px;
+        padding-bottom: 32px;
     }
 }
