--- a/style/summary_login/login.css
+++ b/style/summary_login/login.css
@@ -70,7 +70,7 @@
     padding: 48px clamp(16px, -132.5px + 24.75vw, 115px);
     width: calc(100% - 64px);
     max-width: 422px;
-    margin: 16px;
+    margin: 32px 16px;
     display: flex;
     flex-direction: column;
     align-items: center;
