--- a/style/summary_login/login_responsive.css
+++ b/style/summary_login/login_responsive.css
@@ -33,10 +33,6 @@
     }
 }
 
-@media (max-width: 900px) {
-   
-}
-
 @media (max-width: 768px) {
     .login-container {
         width: 100%;
@@ -46,10 +42,6 @@
         align-items: center;
         justify-content: space-evenly;
     }
-}
-
-@media (max-width: 700px) {
-    
 }
 
 @media (max-width: 600px) {
@@ -113,7 +105,7 @@
 }
 
 @media (max-width: 400px) {
-    .login-error-message.login-error-message {
+    .login-error-message {
         font-size: 14px;
     }
 }
