changed media 768px to comment because i need to wait for login responsive to get on main to work with it

--- a/style/summary_login/animation.css
+++ b/style/summary_login/animation.css
@@ -54,6 +54,7 @@
     opacity: 1;
 }
 
+/*
 @media (max-width: 768px) {
     @keyframes logoAnimation {
         0% {
@@ -67,3 +68,4 @@
         }
     }
 }
+    */
