--- a/style/board_overlay_responsive.css
+++ b/style/board_overlay_responsive.css
@@ -61,4 +61,12 @@
     #task_subtask {
         width: 100%;
     }
+
+    .overlay_header p {
+        font-size: 20px !important;
+    }
+
+    .overlay_main_content h1 {
+        font-size: 32px;
+    }
 }
