removed !important and replaced with other class name

--- a/style/board_responsive.css
+++ b/style/board_responsive.css
@@ -4,10 +4,10 @@
         height: auto;
     }
 
-    .column_content {
+    .board_table .column_content {
         display: flex;
         flex-direction: row;
-        overflow-x: auto !important;
+        overflow-x: auto;
         gap: 16px;
     }
 
