--- a/style/board_overlay_responsive.css
+++ b/style/board_overlay_responsive.css
@@ -62,8 +62,8 @@
         width: 100%;
     }
 
-    .overlay_header p {
-        font-size: 20px !important;
+    body .overlay_header p {
+        font-size: 20px;
     }
 
     .overlay_main_content h1 {
