create hover effect for avatar icon in header

--- a/style/mainframe.css
+++ b/style/mainframe.css
@@ -178,6 +178,10 @@ article {
     box-sizing: border-box;
 }
 
+.header-avatar:hover {
+    background-color: #CDCDCD;
+}
+
 .avatar-wrapper {
     position: relative;
     border: none;
