move class d-none to standard

--- a/style/mainframe_responsive.css
+++ b/style/mainframe_responsive.css
@@ -7,6 +7,10 @@
         display: none;
     }
 
+    .hide-for-desktop{
+        display: unset;
+    }
+
     .header-nav {
         justify-content: space-between;
     }
