--- a/style/board_overlay_style.css
+++ b/style/board_overlay_style.css
@@ -29,8 +29,8 @@
     transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
 
     width: 520px;
-    /* min-height: 600px; */
-    height: 900px;
+    height: 90vh;
+    max-height: 900px;
     background-color: white;
     border-radius: 30px;
     z-index: 1000;
