--- a/style/mainframe.css
+++ b/style/mainframe.css
@@ -218,7 +218,7 @@ article {
     visibility: visible;
 }
 
-.hidden {
+.hidden{
     display: none;
 }
 
@@ -237,7 +237,12 @@ article {
     text-decoration: underline;
 }
 
-.help-icon {
+.avatar-menu {
+    top: 55px;
+    right: 327px;
+}
+
+.help-icon{
     transition: transform 0.1s ease-in-out;
 }
 
