update style of avatar menu to add transform

--- a/style/mainframe_responsive.css
+++ b/style/mainframe_responsive.css
@@ -11,6 +11,10 @@
         display: unset;
     }
 
+    .avatar-menu{
+        transition: opacity 0.5s, transform 0.3s, visibility 0.3s;
+    }
+
     .header-nav {
         justify-content: space-between;
     }
