update style of avatar menu to add transform

--- a/style/mainframe.css
+++ b/style/mainframe.css
@@ -220,7 +220,7 @@ article {
     visibility: visible;
 }
 
-.hidden {
+.hidden{
     display: none;
 }
 
@@ -239,7 +239,12 @@ article {
     text-decoration: underline;
 }
 
-.help-icon {
+.avatar-menu {
+    top: 55px;
+    right: 327px;
+}
+
+.help-icon{
     transition: transform 0.1s ease-in-out;
 }
 
