--- a/style/mainframe.css
+++ b/style/mainframe.css
@@ -198,10 +198,9 @@ article {
     right: 16px;           
     background-color: #2A3647;
     border-radius: 20px 0 20px 20px;
-    padding: 12px 18px;
+    padding: 8px;
     display: flex;
     flex-direction: column;
-    gap: 12px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.15);
     z-index: 1000;
     transform: translateX(120%);
@@ -230,11 +229,11 @@ article {
     font-family: Inter, sans-serif;
     text-align: left;
     cursor: pointer;
-    padding: 4px 0;
+    padding: 16px;
 }
 
 .avatar-menu-item:hover {
-    text-decoration: underline;
+    background-color: #2A3D59;
 }
 
 .help-icon {
