--- a/style/mainframe_responsive.css
+++ b/style/mainframe_responsive.css
@@ -13,6 +13,7 @@
 
     .avatar-menu{
         transition: opacity 0.5s, transform 0.3s, visibility 0.3s;
+        right: 0px;
     }
 
     .header-nav {
