--- a/style/mainframe.css
+++ b/style/mainframe.css
@@ -214,7 +214,7 @@ article {
 
 .show-avatar-menu {
     opacity: 1;
-    transform: translateX(0);
+    transform: none;
     pointer-events: auto;
     visibility: visible;
 }
