--- a/style/summary_login/login.css
+++ b/style/summary_login/login.css
@@ -13,6 +13,7 @@
     max-width: 1440px;
     display: flex;
     justify-content: space-between;
+    min-height: 202px;
 }
 
 .login-container {
@@ -26,8 +27,6 @@
 }
 
 .login-logo {
-    padding-top: 80px;
-    padding-left: 77px;
     display: flex;
     object-fit: contain;
 }
@@ -212,9 +211,9 @@
 }
 
 .sticky-bottom {
-  position: sticky;
-  bottom: 0;
-  z-index: 10;
+    position: sticky;
+    bottom: 0;
+    z-index: 10;
 }
 
 .login-button {
@@ -241,55 +240,59 @@
     font-family: Inter, sans-serif;
 }
 
+#animatedLogo {
+    z-index: 23;
+    animation: logoAnimation .7s ease-in-out forwards;
+}
+
 .animation-overlay {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: #F6F7F8;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-    transition: background-color 0.3s ease;
+    animation: backgroundColor 1s ease-in forwards;
 }
 
-.animation-overlay.fade-out {
-    background-color: transparent;
-    pointer-events: none;
+.placeholder {
+    animation: placeholder .7s ease-in-out forwards;
 }
 
-.animation-overlay.static {
-    position: fixed;
-    top: 64px;
-    left: 66px;
-    width: auto;
-    height: auto;
-    background: transparent;
-    z-index: 100;
-}
-
-.animation-overlay.static .animated-logo {
-    animation: none;
-    width: 100px;
-    height: auto;
-}
-
-.animated-logo {
-    width: 274px;
-    height: auto;
-    animation: logoAnimation 1.5s ease-in-out forwards;
-}
 
 @keyframes logoAnimation {
     0% {
-        transform: translate(0, 0) scale(1);
-    }
-
-    66% {
-        transform: translate(0, 0) scale(1);
+        content: url(/assets/icons/logo/logoSmall.svg);
+        position: fixed;
+        width: 274px;
+        height: auto;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
 
     100% {
-        transform: translate(calc(-50vw + 116px), calc(-50vh + 124px)) scale(0.365);
+        content: url(/assets/icons/logo/logoSmall.svg);
+        position: fixed;
+        width: 100px;
+        top: 80px;
+        left: 77px;
+        transform: translate(0, 0);
+    }
+}
+
+@keyframes backgroundColor {
+    0% {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background-color: #F6F7F8;
+        z-index: 25; 
+    }
+
+    100% {
+        background-color: transparent;
+        z-index: 0; 
+    }
+}
+
+@keyframes placeholder {
+    0% {}
+    100% {
+        display: none;
     }
 }
