added a height limit to user display, to avoid the container display being too high

--- a/style/board_overlay_style.css
+++ b/style/board_overlay_style.css
@@ -175,7 +175,9 @@
 }
 
 .overlay_main_content .assigned_users_info .assigned_users{
-    margin-top: 8px
+    margin-top: 8px;
+    max-height: 168px;
+    overflow-y: auto;
 }
 
 .overlay_main_content .assigned_users_info .assigned_users .assigned_user_content{
