--- a/style/summary_login/login.css
+++ b/style/summary_login/login.css
@@ -27,6 +27,8 @@
 }
 
 .login-logo {
+    padding-top: 80px;
+    padding-left: 77px;
     display: flex;
     object-fit: contain;
 }
@@ -241,11 +243,12 @@
 }
 
 #animatedLogo {
-    z-index: 23;
+    z-index: 26;
     animation: logoAnimation .7s ease-in-out forwards;
 }
 
 .animation-overlay {
+    background-color: #F6F7F8;
     animation: backgroundColor 1s ease-in forwards;
 }
 
@@ -280,18 +283,19 @@
         position: fixed;
         width: 100%;
         height: 100%;
-        background-color: #F6F7F8;
-        z-index: 25; 
+        opacity: 1;
+        z-index: 25;
     }
 
     100% {
-        background-color: transparent;
-        z-index: 0; 
+        opacity: 0;
+
     }
 }
 
 @keyframes placeholder {
     0% {}
+
     100% {
         display: none;
     }
