--- a/style/summary_login/login_responsive.css
+++ b/style/summary_login/login_responsive.css
@@ -81,16 +81,16 @@
             width: 100%;
             height: 100%;
             background-color: #2a3647;
+            opacity: 1;
             z-index: 25;
         }
 
         100% {
-            background-color: transparent;
-            z-index: 0;
+            opacity: 0;
         }
     }
 
-    /* .login-logo img {
+    .login-logo img {
         width: 64px;
         height: 78px;
     }
@@ -98,7 +98,7 @@
     .login-logo {
         padding-top: 37px;
         padding-left: 38px;
-    } */
+    }
 
     .login-mobile {
         display: flex;
