--- a/style/summary_login/summary_responsive.css
+++ b/style/summary_login/summary_responsive.css
@@ -53,9 +53,6 @@
 @media (max-width: 1150px) {
     .main-content {
         padding: 0px 15px;
-
-
-
         margin: 0 auto;
 
     }
@@ -207,8 +204,7 @@
 
 }
 
-@media (max-width: 375px),
-(max-height: 667px) {
+@media (max-width: 375px) and (max-height: 667px) {
     .summary-cards-wrapper {
         gap: 0px;
         margin-bottom: 0px;
