--- a/style/board_style.css
+++ b/style/board_style.css
@@ -167,6 +167,7 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    align-self: flex-start;
     margin-bottom: 16px;
 }
 
@@ -192,6 +193,10 @@ h1 {
     font-weight: 700;
     margin: 16px 0px 8px 0px;
     font-family: "Inter_bold";
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 100%;
 }
 
 .single_task_content p {
@@ -327,4 +332,13 @@ h1 {
 
 .required-field-section-responsive {
     display: none;
+}
+
+.task_card_description {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    width: 100%;
 }
