removed hard coded title limit in task overlay and used a css alternative

--- a/style/board_overlay_style.css
+++ b/style/board_overlay_style.css
@@ -329,6 +329,10 @@
 
 .overlay_title {
     font-size: 42px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 100%;
 }
 
 .task_overlay_description {
