--- a/style/add_task_subtask_contacts.css
+++ b/style/add_task_subtask_contacts.css
@@ -169,7 +169,7 @@
     display: flex;
 }
 
-.contact-select-button P {
+.contact-select-button p {
     font-size: 20px;
     line-height: 120%;
     font-family: "Inter";
