--- a/style/mainframe.css
+++ b/style/mainframe.css
@@ -139,6 +139,7 @@ article {
     padding: 0px 64px;
     background-color: #F6F7F8;
     height: 100%;
+    min-height: 100vh;
 }
 
 .current-selection {
