--- a/style/contacts/contacts.css
+++ b/style/contacts/contacts.css
@@ -2,6 +2,7 @@
     display: flex;
     background-color: #F6F7F8;
     height: 100%;
+    max-width: calc(1440px - 232px);
 }
 
 .sidebar-contacts {
@@ -78,6 +79,7 @@
     width: 100%;
     margin-left: 80px;
     margin-top: 110px;
+    margin-right: 25px;
 }
 
 .contact-header {
@@ -124,7 +126,7 @@
     color: white;
     border-radius: 70px;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
-    width: 120px;
+    min-width: 120px;
     height: 120px;
 }
 
@@ -132,6 +134,11 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
+}
+
+.name-field p{
+    word-break: break-word;
+    overflow-wrap: break-word;
 }
 
 .fullname {
@@ -192,7 +199,7 @@
     align-items: center;
     color: white;
     border-radius: 45px;
-    width: 42px;
+    min-width: 42px;
     height: 42px;
 }
 
@@ -201,6 +208,11 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 5px;
+}
+
+.list-info p{
+    word-break: break-word;
+    overflow-wrap: break-word;
 }
 
 .color-mail {
