--- a/style/contacts/contacts.css
+++ b/style/contacts/contacts.css
@@ -128,6 +128,7 @@
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
     min-width: 120px;
     height: 120px;
+    min-width: 120px;
 }
 
 .name-field {
@@ -201,6 +202,7 @@
     border-radius: 45px;
     min-width: 42px;
     height: 42px;
+    min-width: 42px;
 }
 
 .list-info {
