--- a/style/contacts/contact_responsive.css
+++ b/style/contacts/contact_responsive.css
@@ -60,9 +60,9 @@
 
     .add-contact-btn-position {
         bottom: 40px;
-        
+
         margin-left: auto;
-        
+
     }
 
     .add-contact-btn {
@@ -343,5 +343,35 @@
 
     .position-edit {
         top: 18%;
+    }
+}
+
+@media (max-width: 375px) and (max-height: 667px) {
+    .dialog-content {
+        width: 295px;
+    }
+
+    .position-edit {
+        top: 25%;
+    }
+
+    .contact-display {
+        width: 80%;
+    }
+
+    .sub-menu-btn {
+        right: 17%;
+    }
+
+    .sub-menu-btns {
+        margin-right: 56px;
+    }
+
+    .add-contact-btn-position {
+        margin-left: 56%;
+    }
+
+    .position {
+        top: 33%;
     }
 }
