--- a/style/mainframe_responsive.css
+++ b/style/mainframe_responsive.css
@@ -1,3 +1,9 @@
+@media (max-width: 1300px) {
+    .main-content {
+        min-height: 100vh;
+    }
+}
+
 @media (max-width: 767px) {
     .header-nav p {
         display: none;
@@ -7,11 +13,11 @@
         display: none;
     }
 
-    .hide-for-desktop{
+    .hide-for-desktop {
         display: unset;
     }
 
-    .avatar-menu{
+    .avatar-menu {
         transition: opacity 0.5s, transform 0.3s, visibility 0.3s;
         right: 0px;
     }
