update path for mobile display

--- a/style/summary_login/login_responsive.css
+++ b/style/summary_login/login_responsive.css
@@ -71,7 +71,7 @@
 
     @keyframes logoAnimation {
         0% {
-            content: url(/assets/icons/logo/logo_white.svg);
+            content: url(../../assets/icons/logo/logoSmall.svg);
             position: fixed;
             width: 274px;
             height: auto;
@@ -81,7 +81,7 @@
         }
 
         100% {
-            content: url(/assets/icons/logo/logoSmall.svg);
+            content: url(../../assets/icons/logo/logoSmall.svg);
             position: fixed;
             width: 64px;
             top: 37px;
