--- a/style/summary_login/login.css
+++ b/style/summary_login/login.css
@@ -15,6 +15,7 @@
     display: flex;
     justify-content: space-between;
     min-height: 202px;
+    
 }
 
 .login-container {
@@ -261,7 +262,7 @@
 @keyframes logoAnimation {
     0% {
         content: url(../../assets/icons/logo/logoSmall.svg);
-        position: fixed;
+        position: absolute;
         width: 274px;
         height: auto;
         top: 50%;
@@ -271,10 +272,10 @@
 
     100% {
         content: url(../../assets/icons/logo/logoSmall.svg);
-        position: fixed;
+        position: absolute;
         width: 100px;
-        top: 80px;
-        left: 77px;
+        top: -161px;    
+        left: calc(89vw - 100vw);    
         transform: translate(0, 0);
     }
 }
