fix: changed css class for signup logo to not be the same like the login-logo class, so adjustments in login.css for the logo dont affect the signup.html logo

--- a/style/summary_login/signup.css
+++ b/style/summary_login/signup.css
@@ -6,6 +6,13 @@
     border-color: #D1D1D1;
 }
 
+.login-logo-signup {
+    padding-top: 80px;
+    padding-left: 77px;
+    display: flex;
+    object-fit: contain;
+}
+
 .signup-form {
     width: 100%;
     max-width: 432px;
