fix: added min height to overlay title when in resp mode to ensure the title is properly displayed

--- a/style/board/board_overlay_responsive.css
+++ b/style/board/board_overlay_responsive.css
@@ -26,6 +26,10 @@
     .overlay_content p {
         font-size: 16px;
     }
+
+    .overlay_title {
+        min-height: 38px;
+    }
 }
 
 @media (max-width: 650px) {
