--- a/style/add_task/add_task.css
+++ b/style/add_task/add_task.css
@@ -182,7 +182,7 @@ textarea.task-input {
     border-color: #D1D1D1;
     font-size: 20px;
     line-height: 120%;
-    background-image: url('../assets/icons/addTask/dropdown.svg');
+    background-image: url('../../assets/icons/addTask/dropdown.svg');
     background-repeat: no-repeat;
     background-position: right 12px center;
     background-size: 24px 24px;
