--- a/style/summary_login/login.css
+++ b/style/summary_login/login.css
@@ -12,9 +12,9 @@
 .login-logo-section {
     width: 100%;
     max-width: 1440px;
+    min-height: 201px;
     display: flex;
     justify-content: space-between;
-    min-height: 202px;
     position: relative;
 }
 
@@ -264,7 +264,7 @@
         content: url(../../assets/icons/logo/logoSmall.svg);
         position: absolute;
         width: 274px;
-        height: 120px;
+        height: auto;
         top: 50vh;
         left: 50%;
         transform: translate(-50%, -50%);
