--- a/style/contacts/contacts.css
+++ b/style/contacts/contacts.css
@@ -203,7 +203,8 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding-top: 15px;
+    padding-top: 5px;
+    padding-bottom: 10px;
     padding-left: 36px;
     cursor: pointer;
     gap: 35px;
