adjust content to match sample iphone SE without scrollbar

--- a/style/summary_login/signup.css
+++ b/style/summary_login/signup.css
@@ -134,6 +134,7 @@ button.signup-button-primary:disabled {
     display: flex;
     align-items: center;
     margin-top: 4px;
+    margin-left: 8px;
     font-size: 16px;
     color: #FF3B3B;
     font-family: Inter, sans-serif;
