--- a/style/summary_login/login_responsive.css
+++ b/style/summary_login/login_responsive.css
@@ -125,12 +125,13 @@
         justify-content: center;
         align-items: center;
         gap: 12px;
+        margin-top: 32px;
     }
 
     .login-button-primary,
     .login-button-secondary,
     .login-input {
-        font-size: 18px;
+        font-size: 16px;
     }
 
 }
@@ -172,7 +173,7 @@
     }
 }
 
-@media (max-width: 375px) and (max-height: 667px) {
+@media (max-width: 380px) and (max-height: 670px) {
     .login-logo-section {
         min-height: 102px;
     }
@@ -182,7 +183,11 @@
     }
 
     .login-footer {
-        padding: 16px 0;
+        padding: 8px 0;
+    }
+
+    .login-input{
+        height: 32px;
     }
 }
 
