reduce font size to 16px for small width in add task

--- a/style/add_task/add_task_responsive.css
+++ b/style/add_task/add_task_responsive.css
@@ -76,4 +76,14 @@
     .contact-button {
         padding: 12px 4px;
     }
+
+    .input-form p,
+    .input-form label,
+    .input-form input,
+    .input-form option,
+    .input-form select,
+    .input-form textarea,
+    .required-text {
+        font-size: 16px;
+    }
 }
