reduce wasted space above h1 in add task and board for screens less than 767px width

--- a/style/add_task/add_task_responsive.css
+++ b/style/add_task/add_task_responsive.css
@@ -51,6 +51,10 @@
     .hide-req-text-767 {
         display: none;
     }
+
+    .add-task-content {
+        margin-top: 0;
+    }
 }
 
 @media (max-width: 500px) {
