--- a/style/summary_login/summary_responsive.css
+++ b/style/summary_login/summary_responsive.css
@@ -136,9 +136,6 @@
 
     .summary-cards-wrapper {
         margin-bottom: 170px;
-    }
-
-    .summary-cards-wrapper {
         max-width: 385px;
     }
 
@@ -164,7 +161,7 @@
     }
 
     .summary-cards-wrapper {
-        max-width: 308px;
+        width: 100%;
         height: 548px;
         margin: 0px -5px;
         gap: 20px;
