--- a/style/summary_login/summary_responsive.css
+++ b/style/summary_login/summary_responsive.css
@@ -105,13 +105,13 @@
     }
 
     .padding-all-cards {
-        padding: 10px 10px;
+        padding: 10px;
     }
 
     .summary-cards-first-row:hover,
     .summary-cards-last-row:hover,
     .summary-card-second-row:hover {
-        padding: 20px 20px;
+        padding: 20px;
     }
 
     .number-label {
@@ -152,7 +152,7 @@
 
 @media (max-width: 410px) {
     .main-content {
-        padding: 0;
+        padding: 8px;
         margin: 0;
     }
 
@@ -166,6 +166,22 @@
         margin: 0px -5px;
         gap: 20px;
         margin-bottom: 56px;
+    }
+
+    .summary-cards-last-row{
+        width: calc(100% / 3);
+        margin: 5px;
+    }
+
+    .summary-cards-first-row,
+    .summary-card-second-row {
+        margin: 5px;
+    }
+
+    .summary-cards-first-row:hover,
+    .summary-cards-last-row:hover,
+    .summary-card-second-row:hover {
+        padding: 10px;
     }
 
     .contact-header-text {
@@ -192,8 +208,8 @@
         gap: 3px;
     }
 
-    .summary-card-second-row {
-        gap: 6px;
+    .padding-all-cards {
+        padding: 5px;
     }
 
 }
