--- a/style/contacts/contact_responsive.css
+++ b/style/contacts/contact_responsive.css
@@ -49,6 +49,7 @@
 
     .position-two-letter {
         margin: -85px auto 5px auto;
+        z-index: 1;
     }
 
     .cancel-add-btn {
@@ -110,6 +111,7 @@
         gap: 12px;
         border-top-right-radius: 30px;
         border-bottom-left-radius: 0;
+        position: relative;
     }
 
     .main-right {
@@ -129,11 +131,17 @@
         padding: 10px 10px;
     }
 
-    .close-btn {
-        position: fixed;
-        top: 1%;
-        left: 92%;
-        translate: -50%;
+    .main-left .close-btn {
+        position: relative;
+        top: -100px;
+        right: 0;
+        margin-bottom: 0;
+        display: flex;
+        padding: 0;
+    }
+
+    .main-right .close-btn {
+        display: none;
     }
 
     .add-contact-info {
@@ -351,6 +359,12 @@
     .label-responsiv {
         padding: 7px 3px !important;
     }
+
+     .main-left .close-btn {
+        position: relative;
+        top: -40px;
+        right: 0;
+     }
 }
 
 @media (max-width: 375px) and (max-height: 667px) {
