--- a/style/contacts/contact_responsive.css
+++ b/style/contacts/contact_responsive.css
@@ -105,9 +105,9 @@
     }
 
     .main-left {
-        padding: 125px 4%;
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+        justify-content: space-between;
         gap: 12px;
         border-top-right-radius: 30px;
         border-bottom-left-radius: 0;
@@ -123,6 +123,10 @@
         padding-right: 2%;
     }
 
+    .main-left-title {
+        padding: 125px 0 125px 0;
+    }
+
     .create-contact-btn {
         margin-top: 12px;
     }
@@ -133,7 +137,7 @@
 
     .main-left .close-btn {
         position: relative;
-        top: -100px;
+        top: 24px;
         right: 0;
         margin-bottom: 0;
         display: flex;
