--- a/style/contacts/contact_responsive.css
+++ b/style/contacts/contact_responsive.css
@@ -362,6 +362,10 @@
         width: 295px;
     }
 
+    .main-left-title {
+        padding: 36px 0 60px 0;
+    }
+
     .sub-menu-btn {
         right: 17%;
     }
