--- a/style/contacts/contacts.css
+++ b/style/contacts/contacts.css
@@ -15,6 +15,8 @@
     height: calc(100vh - 96px);
     flex-direction: column;
     padding: 0 2% 0 2%;
+    mask-image: linear-gradient(to bottom, black 95%, transparent 100%);
+    -webkit-mask-image: linear-gradient(to bottom, black 95%, transparent 100%);
 }
 
 .contact-list {
