--- a/style/board/board_responsive.css
+++ b/style/board/board_responsive.css
@@ -19,6 +19,10 @@
         min-width: 200px;
         max-width: 220px;
     }
+
+    .column_content .drop_acceptance {
+        width: 250px;
+}
 }
 
 @media (max-width: 1100px) {
