made contact dialog height centered

--- a/style/contacts/add_contact.css
+++ b/style/contacts/add_contact.css
@@ -2,6 +2,7 @@ dialog[open] {
    display: flex;
    z-index: 31;
    justify-content: center;
+   align-items: center;
 }
 
 .dialog-content.show-side {
