changed size of overlay title

--- a/style/contacts/contact_responsive.css
+++ b/style/contacts/contact_responsive.css
@@ -278,6 +278,10 @@
     .dialog-message {
         translate: -11%;
     }
+
+    h1 {
+        font-size: 40px;
+    }
 }
 
 @media (max-width: 470px) {
