--- a/style/contacts/add_contact.css
+++ b/style/contacts/add_contact.css
@@ -111,7 +111,7 @@ dialog[open] {
 }
 
 .icon-close:hover {
-   background-color: #E7E7E7;
+   background-color: #29ABE2;
    border-radius: 12px;
 }
 
