--- a/style/contacts/contact_responsive.css
+++ b/style/contacts/contact_responsive.css
@@ -223,8 +223,7 @@
     .dialog-message {
         position: sticky;
         top: 80%;
-        left: 50%;
-        translate: -50%;
+        left: 0;
     }
 
     .user-active {
@@ -261,21 +260,15 @@
         height: calc(100vh - 150px);
         z-index: 19;
     }
+
+     .dialog-message {
+        top: 76%;
+    }
 }
 
 @media (max-width: 596px) {
     .sub-menu-btns {
         right: 7%;
-    }
-
-    .dialog-message {
-        top: 76%;
-    }
-}
-
-@media (max-width: 560px) {
-    .dialog-message {
-        translate: -11%;
     }
 }
 
@@ -349,6 +342,10 @@
     .label-responsiv {
         padding: 7px 3px !important;
     }
+
+    .font-size-20{
+        font-size: 16px;
+    }
 }
 
 @media (max-width: 375px) and (max-height: 667px) {
@@ -384,6 +381,10 @@
 
     .add-contact-info {
         gap: 28px;
+    }
+
+    .required-info{
+        padding-top: 8px;
     }
 }
 
